tests/rustdoc-ui/issue-106213.stderr
error[E0425]: cannot find value `ident_error` in this scope
  --> $DIR/issue-106213.rs:5:7
   |
LL |     !(ident_error)
   |       ^^^^^^^^^^^ not found in this scope

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
